--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,77 +7,35 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i," rel="stylesheet">
 </head>
 
 <body>
-  <h1>
-    <a></a>Northcoders News</h1>
-  <h2>
-    <a></a>API Endpoints</h2>
-  <h3>
-    <a></a>GET
-    <code>/api/topics</code>
-  </h3>
-  <p>Get all the topics</p>
-  <h3>
-    <a></a>GET
-    <code>/api/topics/:topic/articles</code>
-  </h3>
-  <p>Return all the articles for a certain topic</p>
-  <h3>
-    <a></a>GET
-    <code>/api/articles</code>
-  </h3>
-  <p>Returns all the articles</p>
-  <h3>
-    <a></a>GET
-    <code>/api/articles/:article_id/comments</code>
-  </h3>
-  <p>Get all the comments for a individual article</p>
-  <h3>
-    <a></a>POST
-    <code>/api/articles/:article_id/comments</code>
-  </h3>
-  <p>Add a new comment to an article. This route requires a JSON
-    <code>body</code> with a
-    <code>comment</code> key and value pair
-    <br> e.g:
-    <code>{"comment": "This is my new comment"}</code>
-  </p>
-  <h3>
-    <a></a>PUT
-    <code>/api/articles/:article_id</code>
-  </h3>
-  <p>Increment or Decrement the votes of an article by one. This route requires a
-    <code>vote</code> query of 'up' or 'down'
-    <br> e.g:
-    <code>http://northcoders-news-api.herokuapp.com/api/articles/:article_id?vote=up</code>
-  </p>
-  <h3>
-    <a></a>PUT
-    <code>/api/comments/:comment_id</code>
-  </h3>
-  <p>Increment or Decrement the votes of a comment by one. This route requires a
-    <code>vote</code> query of 'up' or 'down'
-    <br> e.g:
-    <code>http://northcoders-news-api.herokuapp.com/api/comments/:comment_id?vote=down</code>
-  </p>
-  <h3>
-    <a></a>DELETE
-    <code>/api/comments/:comment_id</code>
-  </h3>
-  <p>Deletes a comment if the comment was created by the Northcoder user</p>
-  <h3>
-    <a></a>GET
-    <code>/api/users/:username</code>
-  </h3>
-  <p>Returns a JSON object with the profile data for the specified user.</p>
-  <h3>
-    <a></a>GET
-    <code>/api/users/:username/repos</code>
-  </h3>
-  <p>Returns a JSON array with all the public repos of the specified user.</p>
-
+  <div class="container">
+    <h1>Northcoders News</h1>
+    <h2>API Endpoints</h2>
+    <h3>GET /api/topics</h3>
+    <h4>Get all the topics</h4>
+    <h3>GET /api/topics/:topic/articles</h3>
+    <h4>Return all the articles for a certain topic</h4>
+    <h3>GET /api/articles</h3>
+    <h4>Returns all the articles</h4>
+    <h3>GET /api/articles/:article_id/comments</h3>
+    <h4>Get all the comments for a individual article</h4>
+    <h3> POST /api/articles/:article_id/comments</h3>
+    <h4>Add a new comment to an article. This route requires a JSON body with a key and value pair e.g: {" comment ": "This is
+      my new comment "}</h4>
+    <h3>PUT /api/articles/:article_id</h3>
+    <h4>Increment or Decrement the votes of an article by one. This route requires a vote query of 'up' or 'down' e.g: http://northcoders-news-api.herokuapp.com/api/articles/:article_id?vote=up</h4>
+    <h3>PUT /api/comments/:comment_id</h3>
+    <h4>Increment or Decrement the votes of a comment by one. This route requires a vote query of 'up' or 'down' e.g: http://northcoders-news-api.herokuapp.com/api/comments/:comment_id?vote=down</h4>
+    <h3>DELETE /api/comments/:comment_id</h3>
+    <h4>Deletes a comment if the comment was created by the Northcoder user</h4>
+    <h3>GET /api/users/:username</h3>
+    <h4>Returns a JSON object with the profile data for the specified user.</h4>
+    <h3> GET /api/users/:username/repos</h3>
+    <h4>Returns a JSON array with all the public repos of the specified user</h4>
+  </div>
 </body>
 
 </html>
