--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1>Northcoders News</h1>
+    <h1>News Today</h1>
     <h2>API Endpoints</h2>
     <h3>GET /api/topics</h3>
     <h4>Get all the topics</h4>
